--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,3 +30,7 @@ jobs:
       - name: Test with pytest
         run: |
           python test.py
+      - name: Test coverage
+        run: |
+          coverage run test.py
+          coverage report
