--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
+          pip install flake8 pytest coverage
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
         run: |
@@ -30,7 +30,7 @@ jobs:
       - name: Test with pytest
         run: |
           python test.py
-      - name: Test coverage
+      - name: Report Test coverage
         run: |
           coverage run test.py
           coverage report
